--- a/DataCampRetailProcess.ipynb
+++ b/DataCampRetailProcess.ipynb
@@ -85,17 +85,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6dde4aaf-a3e8-419f-ad6b-a43ed487a48f",
+   "metadata": {},
+   "source": [
+    " ### Exploratory Data Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "0ba9f622-4a1a-40b2-819a-933b7a36d73d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "541909"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### How many rows we have\n",
+    "df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b29a3bca-f13e-4e30-ad47-ef47e3eb077f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4373"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# How many unique customers do we have?\n",
+    "df.select(\"CustomerID\").distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "63fefa9f-68a5-46f8-985e-3dc08e28da83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+-------------+\n",
+      "|           Country|country_count|\n",
+      "+------------------+-------------+\n",
+      "|            Sweden|            8|\n",
+      "|         Singapore|            1|\n",
+      "|           Germany|           95|\n",
+      "|               RSA|            1|\n",
+      "|            France|           87|\n",
+      "|            Greece|            4|\n",
+      "|European Community|            1|\n",
+      "|           Belgium|           25|\n",
+      "|           Finland|           12|\n",
+      "|             Malta|            2|\n",
+      "|       Unspecified|            4|\n",
+      "|             Italy|           15|\n",
+      "|              EIRE|            3|\n",
+      "|         Lithuania|            1|\n",
+      "|            Norway|           10|\n",
+      "|             Spain|           31|\n",
+      "|           Denmark|            9|\n",
+      "|         Hong Kong|            0|\n",
+      "|           Iceland|            1|\n",
+      "|            Israel|            4|\n",
+      "+------------------+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Find which country purchased more?\n",
+    "from pyspark.sql.functions import *\n",
+    "from pyspark.sql.types import *\n",
+    "count_distinct = df.groupBy(\"Country\").agg(countDistinct(\"CustomerID\").alias(\"country_count\"))\n",
+    "count_distinct.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "44199e5b-0531-4060-887f-6e9060d55103",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+-------------+\n",
+      "|        Country|country_count|\n",
+      "+---------------+-------------+\n",
+      "| United Kingdom|         3950|\n",
+      "|        Germany|           95|\n",
+      "|         France|           87|\n",
+      "|          Spain|           31|\n",
+      "|        Belgium|           25|\n",
+      "|    Switzerland|           21|\n",
+      "|       Portugal|           19|\n",
+      "|          Italy|           15|\n",
+      "|        Finland|           12|\n",
+      "|        Austria|           11|\n",
+      "|         Norway|           10|\n",
+      "|        Denmark|            9|\n",
+      "|Channel Islands|            9|\n",
+      "|      Australia|            9|\n",
+      "|    Netherlands|            9|\n",
+      "|         Sweden|            8|\n",
+      "|         Cyprus|            8|\n",
+      "|          Japan|            8|\n",
+      "|         Poland|            6|\n",
+      "|         Greece|            4|\n",
+      "+---------------+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Order the country that has a lot of purc\n",
+    "count_distinct.sort(\"country_count\", ascending=[False]).show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b29a3bca-f13e-4e30-ad47-ef47e3eb077f",
+   "id": "809c8b57-3d00-4a5d-9ad9-1790749104d1",
    "metadata": {},
    "outputs": [],
    "source": []
