--- a/DataCampRetailProcess.ipynb
+++ b/DataCampRetailProcess.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "6c4346a5-7551-472b-856b-4cbb5f28e661",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "0ba9f622-4a1a-40b2-819a-933b7a36d73d",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "541909"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "b29a3bca-f13e-4e30-ad47-ef47e3eb077f",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "4373"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "id": "63fefa9f-68a5-46f8-985e-3dc08e28da83",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "id": "44199e5b-0531-4060-887f-6e9060d55103",
    "metadata": {},
    "outputs": [
@@ -223,14 +223,143 @@
     }
    ],
    "source": [
-    "# Order the country that has a lot of purc\n",
+    "# Order the country that has a lot of purchases Descendent order\n",
     "count_distinct.sort(\"country_count\", ascending=[False]).show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "809c8b57-3d00-4a5d-9ad9-1790749104d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+-------------+\n",
+      "|        Country|country_count|\n",
+      "+---------------+-------------+\n",
+      "| United Kingdom|         3950|\n",
+      "|        Germany|           95|\n",
+      "|         France|           87|\n",
+      "|          Spain|           31|\n",
+      "|        Belgium|           25|\n",
+      "|    Switzerland|           21|\n",
+      "|       Portugal|           19|\n",
+      "|          Italy|           15|\n",
+      "|        Finland|           12|\n",
+      "|        Austria|           11|\n",
+      "|         Norway|           10|\n",
+      "|        Denmark|            9|\n",
+      "|Channel Islands|            9|\n",
+      "|      Australia|            9|\n",
+      "|    Netherlands|            9|\n",
+      "|         Sweden|            8|\n",
+      "|         Cyprus|            8|\n",
+      "|          Japan|            8|\n",
+      "|         Poland|            6|\n",
+      "|         Greece|            4|\n",
+      "+---------------+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy(\"Country\").agg(countDistinct(\"CustomerID\").alias(\"country_count\")).orderBy(desc('country_count')).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "41d4fe12-87f5-481e-8af9-5378de1250cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+\n",
+      "|          max(date)|\n",
+      "+-------------------+\n",
+      "|2011-12-09 12:50:00|\n",
+      "+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Find when the most recent purchased was made on the platform?\n",
+    "spark.sql(\"set spark.sql.legacy.timeParserPolicy=LEGACY\") # 12/1/2010 8:26\n",
+    "df = df.withColumn('date',to_timestamp(\"InvoiceDate\", 'MM/dd/yyyy HH:mm'))\n",
+    "df.select(max(\"date\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "39b39509-6f5c-479b-8f2a-f8253bfe555d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+\n",
+      "|          min(date)|\n",
+      "+-------------------+\n",
+      "|2010-12-01 08:26:00|\n",
+      "+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the earliest purchased done by the customer?\n",
+    "df.select(min(\"date\")).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54ade575-8036-4220-bcfe-885e47b491e7",
+   "metadata": {},
+   "source": [
+    "## Data Pre-Processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "321e1d96-eed3-4003-b98d-2dd7d6627a16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+\n",
+      "|InvoiceNo|StockCode|Description                        |Quantity|InvoiceDate   |UnitPrice|CustomerID|Country       |date               |\n",
+      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+\n",
+      "|536365   |85123A   |WHITE HANGING HEART T-LIGHT HOLDER |6       |12/1/2010 8:26|2.55     |17850     |United Kingdom|2010-12-01 08:26:00|\n",
+      "|536365   |71053    |WHITE METAL LANTERN                |6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|\n",
+      "|536365   |84406B   |CREAM CUPID HEARTS COAT HANGER     |8       |12/1/2010 8:26|2.75     |17850     |United Kingdom|2010-12-01 08:26:00|\n",
+      "|536365   |84029G   |KNITTED UNION FLAG HOT WATER BOTTLE|6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|\n",
+      "|536365   |84029E   |RED WOOLLY HOTTIE WHITE HEART.     |6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|\n",
+      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show(5,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7560e874-7139-46b0-ba87-2cf418225115",
    "metadata": {},
    "outputs": [],
    "source": []
