frequency and monetry values

--- a/DataCampRetailProcess.ipynb
+++ b/DataCampRetailProcess.ipynb
@@ -42,7 +42,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x1bd1ef27d90>"
+       "<pyspark.sql.session.SparkSession at 0x1cd7fef4340>"
       ]
      },
      "execution_count": 2,
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "6c4346a5-7551-472b-856b-4cbb5f28e661",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "0ba9f622-4a1a-40b2-819a-933b7a36d73d",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "541909"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "b29a3bca-f13e-4e30-ad47-ef47e3eb077f",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "4373"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "63fefa9f-68a5-46f8-985e-3dc08e28da83",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "44199e5b-0531-4060-887f-6e9060d55103",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "809c8b57-3d00-4a5d-9ad9-1790749104d1",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "id": "41d4fe12-87f5-481e-8af9-5378de1250cf",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "id": "39b39509-6f5c-479b-8f2a-f8253bfe555d",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "id": "321e1d96-eed3-4003-b98d-2dd7d6627a16",
    "metadata": {},
    "outputs": [
@@ -338,15 +338,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+\n",
-      "|InvoiceNo|StockCode|Description                        |Quantity|InvoiceDate   |UnitPrice|CustomerID|Country       |date               |\n",
-      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+\n",
-      "|536365   |85123A   |WHITE HANGING HEART T-LIGHT HOLDER |6       |12/1/2010 8:26|2.55     |17850     |United Kingdom|2010-12-01 08:26:00|\n",
-      "|536365   |71053    |WHITE METAL LANTERN                |6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|\n",
-      "|536365   |84406B   |CREAM CUPID HEARTS COAT HANGER     |8       |12/1/2010 8:26|2.75     |17850     |United Kingdom|2010-12-01 08:26:00|\n",
-      "|536365   |84029G   |KNITTED UNION FLAG HOT WATER BOTTLE|6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|\n",
-      "|536365   |84029E   |RED WOOLLY HOTTIE WHITE HEART.     |6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|\n",
-      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+\n",
+      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+-------------------+\n",
+      "|InvoiceNo|StockCode|Description                        |Quantity|InvoiceDate   |UnitPrice|CustomerID|Country       |from_date          |date               |\n",
+      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+-------------------+\n",
+      "|536365   |85123A   |WHITE HANGING HEART T-LIGHT HOLDER |6       |12/1/2010 8:26|2.55     |17850     |United Kingdom|2010-12-01 08:26:00|2010-12-01 08:26:00|\n",
+      "|536365   |71053    |WHITE METAL LANTERN                |6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|2010-12-01 08:26:00|\n",
+      "|536365   |84406B   |CREAM CUPID HEARTS COAT HANGER     |8       |12/1/2010 8:26|2.75     |17850     |United Kingdom|2010-12-01 08:26:00|2010-12-01 08:26:00|\n",
+      "|536365   |84029G   |KNITTED UNION FLAG HOT WATER BOTTLE|6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|2010-12-01 08:26:00|\n",
+      "|536365   |84029E   |RED WOOLLY HOTTIE WHITE HEART.     |6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|2010-12-01 08:26:00|\n",
+      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+-------------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -358,8 +358,328 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "7560e874-7139-46b0-ba87-2cf418225115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We have two factors needs to be take in consideration:\n",
+    "# 1- Recency: The most recent purchases done.\n",
+    "# ---> Assign a recency score to each customer\n",
+    "# 2- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f0588a07-66cc-4302-928f-67f3ff02ad12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+-------------------+-------+\n",
+      "|InvoiceNo|StockCode|Description                        |Quantity|InvoiceDate   |UnitPrice|CustomerID|Country       |from_date          |date               |recency|\n",
+      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+-------------------+-------+\n",
+      "|536365   |85123A   |WHITE HANGING HEART T-LIGHT HOLDER |6       |12/1/2010 8:26|2.55     |17850     |United Kingdom|2010-12-01 08:26:00|2010-12-01 08:26:00|0      |\n",
+      "|536365   |71053    |WHITE METAL LANTERN                |6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|2010-12-01 08:26:00|0      |\n",
+      "|536365   |84406B   |CREAM CUPID HEARTS COAT HANGER     |8       |12/1/2010 8:26|2.75     |17850     |United Kingdom|2010-12-01 08:26:00|2010-12-01 08:26:00|0      |\n",
+      "|536365   |84029G   |KNITTED UNION FLAG HOT WATER BOTTLE|6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|2010-12-01 08:26:00|0      |\n",
+      "|536365   |84029E   |RED WOOLLY HOTTIE WHITE HEART.     |6       |12/1/2010 8:26|3.39     |17850     |United Kingdom|2010-12-01 08:26:00|2010-12-01 08:26:00|0      |\n",
+      "+---------+---------+-----------------------------------+--------+--------------+---------+----------+--------------+-------------------+-------------------+-------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.withColumn(\"from_date\", lit(\"12/1/2010 08:26\"))\n",
+    "df = df.withColumn(\"from_date\", to_timestamp(\"from_date\", \"MM/dd/yyyy HH:mm\"))\n",
+    "df2 = df.withColumn(\"from_date\", to_timestamp(col(\"from_date\"))).withColumn(\"recency\", col(\"date\").cast(\"long\") - col(\"from_date\").cast(\"long\"))\n",
+    "\n",
+    "df2.show(5, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "643919d0-1e69-4310-b1f3-dc5d34de4e32",
+   "metadata": {},
+   "source": [
+    "### 1- Select the most recent purchase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "56c6acd7-9829-4afc-82bf-431d2f9b057e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+---------+---------+-----------+--------+-----------+---------+----------+-------+---------+----+\n",
+      "|recency|InvoiceNo|StockCode|Description|Quantity|InvoiceDate|UnitPrice|CustomerID|Country|from_date|date|\n",
+      "+-------+---------+---------+-----------+--------+-----------+---------+----------+-------+---------+----+\n",
+      "|    522|      536|      824|        WOO|       3|        12/|      6.4|       180|    Uni|      201| 201|\n",
+      "|    522|      536|      847|        COL|      48|        12/|      0.6|       180|    Uni|      201| 201|\n",
+      "|    522|      536|      224|        HAN|      12|        12/|      1.6|       180|    Uni|      201| 201|\n",
+      "|    522|      536|      213|        HAN|       6|        12/|      2.9|       180|    Uni|      201| 201|\n",
+      "|    522|      536|      224|        NAT|      12|        12/|      2.9|       180|    Uni|      201| 201|\n",
+      "+-------+---------+---------+-----------+--------+-----------+---------+----------+-------+---------+----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = df2.join(df2.groupBy(\"CustomerID\").agg(max(\"recency\").alias(\"recency\")), on=\"recency\", how=\"leftsemi\")\n",
+    "df2.show(5, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "02646bfc-9be2-483a-9eec-86be9739e306",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- recency: long (nullable = true)\n",
+      " |-- InvoiceNo: string (nullable = true)\n",
+      " |-- StockCode: string (nullable = true)\n",
+      " |-- Description: string (nullable = true)\n",
+      " |-- Quantity: integer (nullable = true)\n",
+      " |-- InvoiceDate: string (nullable = true)\n",
+      " |-- UnitPrice: double (nullable = true)\n",
+      " |-- CustomerID: integer (nullable = true)\n",
+      " |-- Country: string (nullable = true)\n",
+      " |-- from_date: timestamp (nullable = true)\n",
+      " |-- date: timestamp (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7af19471-e6c7-4c73-9349-c84d124a5632",
+   "metadata": {},
+   "source": [
+    "### 2- Calculate the frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "e3e4b4dd-29c6-4ba8-88a2-449306ff3f65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+\n",
+      "|CustomerID|frequency|\n",
+      "+----------+---------+\n",
+      "|15447     |9        |\n",
+      "|15100     |1        |\n",
+      "|13898     |12       |\n",
+      "|17950     |33       |\n",
+      "|16565     |3        |\n",
+      "+----------+---------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def_freq = df2.groupBy(\"CustomerID\").agg(count(\"InvoiceDate\").alias(\"frequency\"))\n",
+    "def_freq.show(5,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "2bb5f584-4fd2-4650-ba5a-638c91a5d8de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------+---------+---------+-----------------------------------+--------+--------------+---------+--------------+-------------------+-------------------+---------+\n",
+      "|CustomerID|recency|InvoiceNo|StockCode|Description                        |Quantity|InvoiceDate   |UnitPrice|Country       |from_date          |date               |frequency|\n",
+      "+----------+-------+---------+---------+-----------------------------------+--------+--------------+---------+--------------+-------------------+-------------------+---------+\n",
+      "|18074     |5220   |536384   |82484    |WOOD BLACK BOARD ANT WHITE FINISH  |3       |12/1/2010 9:53|6.45     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |\n",
+      "|18074     |5220   |536384   |84755    |COLOUR GLASS T-LIGHT HOLDER HANGING|48      |12/1/2010 9:53|0.65     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |\n",
+      "|18074     |5220   |536384   |22464    |HANGING METAL HEART LANTERN        |12      |12/1/2010 9:53|1.65     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |\n",
+      "|18074     |5220   |536384   |21324    |HANGING MEDINA LANTERN SMALL       |6       |12/1/2010 9:53|2.95     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |\n",
+      "|18074     |5220   |536384   |22457    |NATURAL SLATE HEART CHALKBOARD     |12      |12/1/2010 9:53|2.95     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |\n",
+      "+----------+-------+---------+---------+-----------------------------------+--------+--------------+---------+--------------+-------------------+-------------------+---------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3 = df2.join(def_freq, on=\"CustomerID\", how=\"inner\")\n",
+    "df3.show(5,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e1c19de1-3eff-44df-9774-830f73ff1f63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- CustomerID: integer (nullable = true)\n",
+      " |-- recency: long (nullable = true)\n",
+      " |-- InvoiceNo: string (nullable = true)\n",
+      " |-- StockCode: string (nullable = true)\n",
+      " |-- Description: string (nullable = true)\n",
+      " |-- Quantity: integer (nullable = true)\n",
+      " |-- InvoiceDate: string (nullable = true)\n",
+      " |-- UnitPrice: double (nullable = true)\n",
+      " |-- Country: string (nullable = true)\n",
+      " |-- from_date: timestamp (nullable = true)\n",
+      " |-- date: timestamp (nullable = true)\n",
+      " |-- frequency: long (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bae5a97-58f2-42d5-b7d2-db635da6eb7a",
+   "metadata": {},
+   "source": [
+    "### 3- Monetary Value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b0b9fb0a-d261-4191-866f-a1d53894303b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Calculate the total amount spent per customer\n",
+    "## Two Steps:\n",
+    "# 1- found the total amount spent in each purchase\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f2e48fca-422f-416d-8080-8de75b257525",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------+---------+---------+-----------------------------------+--------+--------------+---------+--------------+-------------------+-------------------+---------+------------------+\n",
+      "|CustomerID|recency|InvoiceNo|StockCode|Description                        |Quantity|InvoiceDate   |UnitPrice|Country       |from_date          |date               |frequency|TotalAmount       |\n",
+      "+----------+-------+---------+---------+-----------------------------------+--------+--------------+---------+--------------+-------------------+-------------------+---------+------------------+\n",
+      "|18074     |5220   |536384   |82484    |WOOD BLACK BOARD ANT WHITE FINISH  |3       |12/1/2010 9:53|6.45     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |19.35             |\n",
+      "|18074     |5220   |536384   |84755    |COLOUR GLASS T-LIGHT HOLDER HANGING|48      |12/1/2010 9:53|0.65     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |31.200000000000003|\n",
+      "|18074     |5220   |536384   |22464    |HANGING METAL HEART LANTERN        |12      |12/1/2010 9:53|1.65     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |19.799999999999997|\n",
+      "|18074     |5220   |536384   |21324    |HANGING MEDINA LANTERN SMALL       |6       |12/1/2010 9:53|2.95     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |17.700000000000003|\n",
+      "|18074     |5220   |536384   |22457    |NATURAL SLATE HEART CHALKBOARD     |12      |12/1/2010 9:53|2.95     |United Kingdom|2010-12-01 08:26:00|2010-12-01 09:53:00|13       |35.400000000000006|\n",
+      "+----------+-------+---------+---------+-----------------------------------+--------+--------------+---------+--------------+-------------------+-------------------+---------+------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "m_val = df3.withColumn(\"TotalAmount\", col(\"Quantity\") * col(\"UnitPrice\"))\n",
+    "m_val.show(5, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "d7fdefee-174b-4e5b-99b6-f2306ba54fec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------------+\n",
+      "|CustomerID|monetry_value      |\n",
+      "+----------+-------------------+\n",
+      "|15447     |155.17             |\n",
+      "|15100     |-32.849999999999994|\n",
+      "|13898     |155.93             |\n",
+      "|17950     |208.95             |\n",
+      "|16565     |173.7              |\n",
+      "+----------+-------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2- find the total amount spent by each customer\n",
+    "m_val = m_val.groupBy(\"CustomerID\").agg(sum(\"TotalAmount\").alias(\"monetry_value\"))\n",
+    "m_val.show(5,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "851eafcf-f73b-4e77-a1e6-af26ece2097a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge the tow dataframes\n",
+    "final_df = m_val.join(df3, on=\"CustomerID\", how=\"inner\")\n",
+    "final_df.show(5,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "6844d226-a69f-4bc7-93f8-22e58972eba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select the necessery columns to build the column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d452880-5ebd-496c-ad9b-f17e76c13a6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df = final_df.select(['recency','frequency','monetry_value','CustomerID']).distinct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e8761f8-2381-41ed-8e8c-5e593c274a0f",
    "metadata": {},
    "outputs": [],
    "source": []
